// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package com.google.android.apps.miphone.astrea.http.api;

option java_multiple_files = true;
option java_package = "com.google.android.apps.miphone.astrea.http.api.proto";

// Struct representing a key/value pair (e.g. HTTP request property / response
// headers).
message HttpProperty {
  optional string key = 1;
  repeated string value = 2;
}

message HttpDownloadRequest {
  optional string url = 1;
  repeated HttpProperty request_property = 2;
}

message ResponseHeaders {
  optional int32 response_code = 1;
  repeated HttpProperty header = 2;
}

message ResponseBodyChunk {
  optional bytes response_bytes = 1;
}

message HttpDownloadResponse {
  oneof response {
    ResponseHeaders response_headers = 1;
    ResponseBodyChunk response_body_chunk = 2;
  }
}

service HttpService {
  // Download a resource through HTTP/HTTPS.
  rpc Download(HttpDownloadRequest) returns (stream HttpDownloadResponse);
}
